--- a/homework5/style/styles.css
+++ b/homework5/style/styles.css
@@ -1,9 +1,11 @@
 body{
+    font-family: 'Roboto', sans-serif;
     margin: 0;
-    background-color:rgb(37, 71, 94) ;
+    background-color:#E0CCBE;
 }
 p{
-    font-size: larger;
+   font-size: larger;
+   color: #3C3633; 
 }
 .main{
     display: flex;
@@ -18,9 +20,16 @@ p{
     display: flex;
     justify-content: space-evenly;
 }
-th{
-    background-color: burlywood;
+
+#html img{
+    height: 200px;
+    width: 200px;
 }
-td{
-    background-color: blueviolet;
+#css img{
+    height: 200px;
+    width: 200px;
+}
+#js img{
+    height: 200px;
+    width: 200px;
 }
